# ray-tr-hetic

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml  main.cpp
include/image/: Image.hpp
include/materials/: CheckerBoard.hpp  DummyMaterial.hpp  Lambertian.hpp  Material.hpp  Metal.hpp  SideColorMaterial.hpp
include/raymath/: Color.hpp  Hittable.hpp  Ray.hpp  Utils.hpp  Vector.hpp
include/scene/: Camera.hpp  Scene.hpp
include/shapes/: Cube.hpp  Plane.hpp  Sphere.hpp
include/utils/: Logger.hpp  MemoryMonitor.hpp  PerformanceTimer.hpp  RenderMetrics.hpp  SceneParser.hpp
lib/lodepng/: CMakeLists.txt  lodepng.h
lib/nlohmann_json/: CMakeLists.txt
scene_json/: cubes.json  default.json  miror.json  one_weekend.json  room.json  spheres.json
src/image/: CMakeLists.txt  Image.cpp
src/materials/: CMakeLists.txt  Lambertian.cpp  Metal.cpp
src/raymath/: CMakeLists.txt  Color.cpp  Hittable.cpp  Ray.cpp  Vector.cpp
src/scene/: CMakeLists.txt  Camera.cpp  Scene.cpp
src/shapes/: CMakeLists.txt  Cube.cpp  Plane.cpp  Sphere.cpp
src/utils/: CMakeLists.txt  Logger.cpp  MemoryMonitor.cpp  PerformanceTimer.cpp  RenderMetrics.cpp  SceneParser.cpp
